--- a/index.html
+++ b/index.html
@@ -14,38 +14,49 @@
   <input type="radio" name="point" id="slide5">
   <div class="slider">
     <div class="slides slide1">
-      <p>
-        Кот тут не причем, лапы — они ведь сами тянутся к запретному.
-      </p>
+
     </div>
     <div class="slides slide2">
-      <p>
-        А может вот почему меня так часто бьют тапком… надо исправляться уже
-      </p>
+
     </div>
     <div class="slides slide3">
-      <p>
-        Кот сверкает своими глазами как фарами, ну ка дальний свет вырубил быстро! Окей
-      </p>
+
     </div>
     <div class="slides slide4">
-      <p>
-        Твое лицо, когда хозяин сказал мяу вместо тебя
-      </p>
+
     </div>
     <div class="slides slide5">
-      <p>
-        Котик явно задумал недоброе. План мести уже почти созрел у него, поэтому так зловеще горят глаза — #ахахахаха!
-      </p>
+
     </div>
   </div>
   <div class="controls">
-    <label for="slide1"></label>
-    <label for="slide2"></label>
-    <label for="slide3"></label>
-    <label for="slide4"></label>
-    <label for="slide5"></label>
+    <label for="slide1">
+      <p class="text text1">
+        Моя любимая кошка: Хатико, жратико, сратико, а еще спатико оратико и ночью спать недаватико.
+      </p>
+    </label>
+    <label for="slide2">
+      <p class="text text2">
+        Котэ печален, он знает что жрёшь по ночам! а котику не даешь
+      </p>
+    </label>
+    <label for="slide3">
+      <p class="text text3">
+        А может вот почему меня так часто бьют тапком… надо исправляться уже
+      </p>
+    </label>
+    <label for="slide4">
+      <p class="text text4">
+        Твое лицо, когда хозяин сказал мяу вместо тебя
+      </p>
+    </label>
+    <label for="slide5">
+      <p class="text text5">
+        Кот тут не причем, лапы — они ведь сами тянутся к запретному.
+      </p>
+    </label>
   </div>
+
 </div>
 </body>
 </html>
